# kaggle-store-sales

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: .env  eda.ipynb  lgbm.ipynb  predict.ipynb  preprocess.ipynb  train.ipynb
